fix spacing for nav bar

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ a:hover {
 }
 
 #nav {
-    margin: 4rem auto;
+    margin: 3.5rem auto;
     text-align: center;
 }
 
@@ -25,7 +25,7 @@ body {
 }
 
 #hello {
-  margin-top: 12rem;
+  margin-top: 12.5rem;
   margin-bottom: 7rem;
 }
 
